--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <!-- CSS Link -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/index.css">
+    <title>Day #10 - Weather App | AsmrProg</title>
 </head>
 
 <body>
-
-
 
     <div class="container">
         <div class="search-box">
@@ -21,14 +22,14 @@
         </div>
 
         <div class="not-found">
-            <img src="/img/404.png" alt="">
-            <p>Oops! Invalid location</p>
+            <img src="./img/404.png">
+            <p>Oops! Invalid location :/</p>
         </div>
 
         <div class="weather-box">
-            <img src="" alt="">
-            <p>Temperature</p>
-            <p>Description</p>
+            <img src="">
+            <p class="temperature"></p>
+            <p class="description"></p>
         </div>
 
         <div class="weather-details">
@@ -47,13 +48,10 @@
                 </div>
             </div>
         </div>
+
     </div>
 
-
-
-    <!-- FontAwesome JS Link -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
-    <!-- JS Link -->
+    <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
     <script src="/js/index.js"></script>
 </body>
 
